# RayDemo

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  download.py  run_bathroom_cpu.bat  run_bathroom_gpu.bat  run_coffee_cpu.bat  run_coffee_gpu.bat  run_sponza_cpu.bat  run_sponza_cpu_coherent.bat  run_sponza_gpu.bat  run_sponza_gpu_coherent.bat  run_staircase_cpu.bat  run_staircase_gpu.bat  test_img1.h
assets/: config.json
assets/scenes/: bathroom.json  coffee.json  coffee_.json  sponza_simple.json  staircase.json
assets/textures/: 4x4.tga  rect.tga
src/: CMakeLists.txt
src/DemoApp/: CMakeLists.txt  DemoApp.cpp  DemoApp.h
src/DemoLib/: CMakeLists.txt  Viewer.cpp  Viewer.h  exports.cpp
src/DemoLib/load/: Load.cpp  Load.h
src/DemoLib/states/: GSCPUTest.cpp  GSCPUTest.h  GSCreate.cpp  GSCreate.h  GSHDRTest.cpp  GSHDRTest.h  GSHybTest.cpp  GSHybTest.h  GSLightmapTest.cpp  GSLightmapTest.h  GSRayBucketTest.cpp  GSRayBucketTest.h  GSRayTest.cpp  GSRayTest.h  GSSamplingTest.cpp  _states.cpp
src/Ray/internal/: Core.cpp  Core.h  CoreRef.cpp  CoreRef.h  CoreSIMD.h  RendererAVX.cpp  RendererAVX.h  RendererAVX2.cpp  RendererAVX2.h  RendererOCL.cpp  RendererOCL.h  RendererRef.cpp  RendererSIMD.h  RendererSSE2.cpp  RendererSSE2.h  SceneOCL.cpp  SceneOCL.h  SceneRef.cpp  SceneRef.h
src/Ray/internal/kernels/: shade.cl  trace.cl
src/Sys/: Json.cpp
src/demo_app/: CMakeLists.txt  DemoApp.cpp
src/demo_lib/: CMakeLists.txt  Viewer.cpp  Viewer.h
src/demo_lib/comp/: Drawable.cpp  Drawable.h  ISerializable.h  Transform.cpp  Transform.h  _comp.cpp
src/demo_lib/load/: Load.cpp  Load.h
src/demo_lib/renderer/: Renderer.cpp  Renderer.h  RendererSW.cpp  _renderer.cpp
src/demo_lib/states/: GSCPUTest.cpp  GSCPUTest.h  GSClipTest.cpp  GSClipTest.h  GSColorsTest.cpp  GSColorsTest.h  GSCreate.cpp  GSCreate.h  GSCurveTest.cpp  GSCurveTest.h  GSDrawTest.cpp  GSDrawTest.h  GSDrawTestSW.cpp  GSHybTest.cpp  GSHybTest.h  GSPackTest.cpp  GSPackTest.h  GSPluckerTest.cpp  GSPluckerTest.h  GSRayBucketTest.cpp  GSRayBucketTest.h  GSRayTest.cpp  GSRayTest.h  GSSamplingTest.cpp  GSSamplingTest.h  _states.cpp
src/demo_lib/tests/: CMakeLists.txt  main.cpp  test_common.h  test_components.cpp  test_make_cnt.cpp  test_transactions.cpp  test_veh.cpp
src/libs/Shiny/include/: ShinyMacros.h  ShinyPrereqs.h
